header secttion added

--- a/index.html
+++ b/index.html
@@ -1,15 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>B8A2-Gamers-Zone</title>
     <link rel="shortcut icon" href="images/Frame.png" type="image/x-icon">
+    <script src="https://kit.fontawesome.com/93f245bc2f.js" crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato&family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <header>
-<h1> Welcome B8A2-Gamers-Zone Site</h1>
+        <nav class="nav-bar">
+            <div class="logo">
+                <img src="images/Frame.png" alt="">
+                <h3><span>G</span>amer</h3>
+            </div>
+            <div class="nav_menu">
+                <ul class="navinfo">
+                    <li><a href="">About Us</a></li>
+                    <li><a href="">Games</a></li>
+                </ul>
+                <a class="follow-link" href="">Follow us on 
+                    <span class="youtube-icon"><i class="fa-brands fa-youtube" style="color: #f2021a;"></i></span> 
+                    <span class="tiktok-icon"><i class="fa-brands fa-tiktok" style="color: #000000;"></i></span>
+                </a>
+            </div>
+
+        </nav>
     </header>
     <main>
 
@@ -18,4 +40,5 @@
 
     </footer>
 </body>
+
 </html>
