--- a/index.html
+++ b/index.html
@@ -34,6 +34,21 @@
         </nav>
     </header>
     <main>
+        <!-- banner section -->
+        <section class="banner">
+            <div class="banner-1">
+                <h2>PLAY LIKE THE</h2>
+                <h1>G.O.A.T.</h1>
+                    <p>1-Click instant play</p>
+                    <p>No Download</p>
+                    <p>1000s of supported online games</p>
+                    <button class="btn-1">SIGN IN</button>
+                    <button class="btn-2">GO ROGUE</button>
+            </div>
+            <div class="banner-2">
+                <img src="images/Group 18.png" alt="">
+            </div>
+        </section>
 
     </main>
     <footer>
