3rd section added

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
                     <li><a href="">About Us</a></li>
                     <li><a href="">Games</a></li>
                 </ul>
-                <a class="follow-link" href="">Follow us on 
-                    <span class="youtube-icon"><i class="fa-brands fa-youtube" style="color: #f2021a;"></i></span> 
+                <a class="follow-link" href="">Follow us on
+                    <span class="youtube-icon"><i class="fa-brands fa-youtube" style="color: #f2021a;"></i></span>
                     <span class="tiktok-icon"><i class="fa-brands fa-tiktok" style="color: #000000;"></i></span>
                 </a>
             </div>
@@ -39,14 +39,52 @@
             <div class="banner-1">
                 <h2>PLAY LIKE THE</h2>
                 <h1>G.O.A.T.</h1>
-                    <p>1-Click instant play</p>
-                    <p>No Download</p>
-                    <p>1000s of supported online games</p>
-                    <button class="btn-1">SIGN IN</button>
-                    <button class="btn-2">GO ROGUE</button>
+                <p>1-Click instant play</p>
+                <p>No Download</p>
+                <p>1000s of supported online games</p>
+                <button class="btn-1">SIGN IN</button>
+                <button class="btn-2">GO ROGUE</button>
             </div>
             <div class="banner-2">
                 <img src="images/Group 18.png" alt="">
+            </div>
+        </section>
+        <!-- banner end -->
+        <!-- 3rd section start -->
+        <section class="online">
+            <div class="online-text">
+                <h1 class="online-heading">Online Games <span class="fun">Funny Videos</span></h1>
+                <p>A Collection of Hilarious Videos to Brighten Your Day</p>
+            </div>
+            <div class="online-img">
+                <div class="img1">
+                    <div class="hover-1">
+                        <i class="fa-solid fa-circle-play"></i>
+                        <h3>Watch Now</h3>
+                    </div>
+                    <p>No Download. No Installs. Play games Instantly on Gamer.</p>
+                </div>
+                <div class="img2">
+                    <div class="hover-2">
+                        <i class="fa-solid fa-circle-play"></i>
+                        <h3>Watch Now</h3>
+                    </div>
+                    <p>Did you score? #unblockedgames #school</p>
+                </div>
+                <div class="img3">
+                    <div class="hover-3">
+                        <i class="fa-solid fa-circle-play"></i>
+                        <h3>Watch Now</h3>
+                    </div>
+                    <p>Breaking game records like OG</p>
+                </div>
+                <div class="img4">
+                    <div class="hover-4">
+                        <i class="fa-solid fa-circle-play"></i>
+                        <h3>Watch Now</h3>
+                    </div>
+                    <p>Busted gaming on school laptop, but you are still lit.</p>
+                </div>
             </div>
         </section>
 
