4th section added

--- a/index.html
+++ b/index.html
@@ -87,6 +87,19 @@
                 </div>
             </div>
         </section>
+        <!-- 3rd section end -->
+        <!-- 4th section start -->
+        <section class="playinfo">
+            <div class="playtext">
+                <h1><span class="play-heading">Play Instantly, </span><br>No Downloads <br> No Installs.</h1>
+                <p>Play games online for free without <br>downloading. Just click the Play button <br>and play instantly
+                    in your browser.</p>
+            </div>
+            <div class="play-img">
+                <img src="images/Rectangle 66.png" alt="">
+            </div>
+        </section>
+        <!-- 4th section end -->
 
     </main>
     <footer>
