5th button section added

--- a/index.html
+++ b/index.html
@@ -100,6 +100,19 @@
             </div>
         </section>
         <!-- 4th section end -->
+        <!-- 5th section button -->
+        <section class="option-btn">
+            <button class="btn1"> <img src="images/Rectangle 11.png" alt=""> <span>Action Games</span></button>
+            <button class="btn2"> <img src="images/Rectangle 12.png" alt=""> <span>Adventure Games</span></button>
+            <button class="btn3"> <img src="images/Rectangle 13.png" alt=""><span>Arcade Games</span></button>
+            <button class="btn4"> <img src="images/Rectangle 14.png" alt=""><span>Educational Games</span></button>
+            <button class="btn5"> <img src="images/Rectangle 15.png" alt=""><span>Word Games</span></button>
+            <button class="btn6"> <img src="images/Rectangle 16.png" alt=""><span>Role Palying Games</span</button>
+            <button class="btn7"> <img src="images/Rectangle 17.png" alt=""><span>Music & Audio Games</span></button>
+            <button class="btn8"> <img src="images/Rectangle 18.png" alt=""><span>Puzzle Games</span></button>
+            <button class="btn9"> <img src="images/Rectangle 19.png" alt=""><span>Strategy Games</span></button>
+        </section>
+        <!-- 5th section end -->
 
     </main>
     <footer>
