--- a/index.html
+++ b/index.html
@@ -116,7 +116,37 @@
 
     </main>
     <footer>
-
+        <section class="footer">
+            <div class="logo">
+                <img src="images/Frame.png" alt="">
+                <h3><span class="text1">G</span><span class="text2">amer</span></h3>
+            </div>
+            <div class="footer-link">
+                <a href="">Our Story</a>
+                <a href="">Games</a>
+                <a href="">Web Games</a>
+                <a href="">Careers</a>
+                <a href="">Support</a>
+                <a href="">My Account</a>
+            </div>
+            <div class="foot-icon">
+                <a href="https://twitter.com/"><i class="fa-brands fa-twitter fa-xl" style="color: #fafafa;"></i></a>
+                <a href="https://www.facebook.com/"><i class="fa-brands fa-facebook fa-xl" style="color: #f5f5f5;"></i></a>
+                <a href="https://www.youtube.com/"><i class="fa-brands fa-youtube fa-xl" style="color: #ffffff;"></i></a>
+                <a href="https://www.linkedin.com/"><i class="fa-brands fa-linkedin-in fa-xl" style="color: #ffffff;"></i></a>
+                <a href="https://www.instagram.com/"><i class="fa-brands fa-instagram fa-xl"style="color: #ffffff;"></i></a>
+                <a href="https://www.apple.com/"><i class="fa-brands fa-apple fa-xl"style="color: #ffffff;"></i></a>
+            </div>
+            <div class="terms">
+                <a href="">Terms and Conditions</a>
+                <a href="">Privacy Policy</a>
+                <a href="">Cookie Policy</a>
+                <a href="">Privacy Settings</a>
+            </div>
+            <div class="copywright">
+                <p>Play Games @ Gamer <span>@ 2000-2023 Gamer Bangladesh</span></p>
+            </div>
+    </section>
     </footer>
 </body>
 
