--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
     </main>
     <footer>
         <section class="footer">
-            <div class="logo">
+            <div class="flogo">
                 <img src="images/Frame.png" alt="">
                 <h3><span class="text1">G</span><span class="text2">amer</span></h3>
             </div>
